# portablesource

./: .gitignore  .gitmodules  BUILD.md  LICENSE  README.md  README_RU.md  Readme.md  TODO  index.html  package-lock.json  package.json  sync-version.js  vite.config.ts
.github/workflows/: build.yml  python-publish.yml
portablesource/: Version.py  downloader.py  get_gpu.py  install_from_source.py  repos.py  updater_facefusion.py
src/: App.svelte  app.css  app.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: i18n.ts
src/lib/components/: Console.svelte  ConsoleSettings.svelte  ConsoleToggle.svelte  LanguageSwitcher.svelte
src/lib/locales/: en.json  ru.json
src/lib/stores/: console.ts
src/lib/types/: console.ts
src/routes/: +layout.svelte  +page.svelte
