[package]
name = "portablesource"
version = "0.0.13"
description = "App for easy install AI"
authors = ["NeuroDonu"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
winreg = "0.52"
reqwest = { version = "0.12.5", features = ["json"] }
zip = "2.1.3"
tokio = { version = "1.38.0", features = ["full"] }
portablesource-rs = { path = "../cli" }
